newProject4/force-app/main/default/objects/SampleObject2__c/fields/Calculate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Discount__c</fullName>
    <formula>Cost__c * 0.10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate_Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>