newProject4/force-app/main/default/objects/SampleObject2__c/fields/Date_Diff__c.field-meta.xml
<CustomField>
    <fullName>Date_Diff__c</fullName>
    <formula>CreatedDate  -  LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>