newProject4/force-app/main/default/objects/SampleObject2__c/fields/Formula_Try__c.field-meta.xml
<CustomField>
    <fullName>Formula_Try__c</fullName>
    <formula>CreatedBy.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula_Try</label>
    <type>Text</type>
</CustomField>